--- a/app/views/adoptions/_my_applications.html.erb
+++ b/app/views/adoptions/_my_applications.html.erb
@@ -39,13 +39,13 @@
               </div>
             <% end %>
           <% else %>
-          <div class="card-contracts p-4 w-100">
+          <div class="card-contracts px-4 w-100">
             <p class="d-flex mb-0">Você ainda não tem nenhuma adoção</p>
           </div>
           <% end %>
         </div> <!-- END: row -->
       <% else %>
-        <div class="card-contracts p-4 w-100">
+        <div class="card-contracts px-4 w-100">
           <p class="mb-0">Nenhuma aplicação encontrada</p>
         </div>
       <% end %>
@@ -88,13 +88,13 @@
               </div>
             <% end %>
           <% else %>
-            <div class="card-contracts p-4 w-100">
+            <div class="card-contracts px-4 w-100">
               <p class="d-flex mb-0">Você ainda não possui nenhum interessado</p>
             </div>
           <% end %>
         </div> <!-- END: row -->
       <% else %>
-        <div class="card-contracts p-4 w-100">
+        <div class="card-contracts px-4 w-100">
           <p class="mb-0">Nenhuma adoção encontrada</p>
         </div>
       <% end %>
