--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,94 @@
-<% if user_signed_in? && current_user.adopter? && @adoption %>
-  <p class="navigation mb-1 mt-5">
-    <%= link_to "Home", "/", class:"navigation" %> /
-    <%= @adoption.user.first_name %> <%= @adoption.user.last_name %>
-  </p>
+<div class="container">
+   <% if user_signed_in? && @user.adopter? %> <%#se o usuário estiver logado e o user que ele clica for um adotante %>
+    <p class="navigation mb-1 mt-5">
+      <%= link_to "Home", "/", class:"navigation" %> /
+      <%= link_to "Animais para adoção", animals_path, class:"navigation" %> /
+      <%= @user.first_name %> <%= @user.last_name %>
+    </p>
 
-  <%= link_to 'Edit', edit_user_path(@user), class:"btn btn-dark-green" %>
-<% else %>
-<% end %>
+    <div class="d-flex mt-3">
+      <% if current_user.photo.attached? %>
+        <%= cl_image_tag current_user.photo.key, class: "avatar-show", alt: "avatar photo", height: 200, width: 200 %>
+      <% else %>
+        <%= image_tag "cat.jpg", class: "avatar-show", alt: "avatar photo", height: 200, width: 200 %>
+      <% end %>
+
+      <div class="user-info ms-3">
+        <h1 class="second-title"><%= @user.first_name%> <%= @user.last_name %></h1>
+        <p class="mb-0"><i class="fa-solid fa-location-dot me-1"></i> <%= @user.city %>/<%= @user.state %></p>
+        <p><i class="fa-solid fa-phone"></i> <%= @user.email %></p>
+      </div>
+
+      <%= link_to 'Edit', edit_user_path(@user), class:"btn btn-dark-green" %>
+    </div>
+
+  <% elsif user_signed_in? && @user.adopter? == false %> <%#se o usuário estiver logado e o user que ele clica for um doador %>
+    <p class="navigation mb-1 mt-5">
+      <%= link_to "Home", "/", class:"navigation" %> /
+      <%= link_to "Animais para adoção", animals_path, class:"navigation" %> /
+      <%= @user.first_name %> <%= @user.last_name %>
+    </p>
+
+    <div class="d-flex w-100 mt-3 px-4">
+      <% if current_user.photo.attached? %>
+        <%= cl_image_tag current_user.photo.key, class: "avatar-show", alt: "avatar photo", height: 200, width: 200 %>
+      <% else %>
+        <%= image_tag "cat.jpg", class: "avatar-show", alt: "avatar photo", height: 200, width: 200 %>
+      <% end %>
+
+      <div class="user-info ms-4 w-100">
+        <div class="d-flex w-100">
+          <h1 class="second-title"><%= @user.first_name%> <%= @user.last_name %></h1>
+          <% if @user == current_user %>
+            <%= link_to 'Editar', edit_user_path(@user), class:"btn-dark-green btn-height" %>
+          <% end %>
+        </div>
+        <p class="mb-0"><i class="fa-solid fa-location-dot me-1"></i> <%= @user.city %>/<%= @user.state %></p>
+        <p><i class="fa-solid fa-phone"></i> <%= @user.email %></p>
+
+        <div class="d-flex mt-5">
+          <h2 class="h2-info"><strong><%= @user.animals.count %></strong> animais divulgados</h2>
+          <h2 class="h2-info ms-5"><strong><%= @user.adoptions.count %></strong> animais adotados</h2>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row d-flex align-items-between mx-3 mt-5 mb-4">
+      <% @user.animals.each do |animal| %>
+          <div class="col-sm-3 mb-4">
+            <div class="card-index mx-auto my-auto">
+
+              <div class="position-relative">
+                <div>
+                  <% if animal.photo.attached? %>
+                    <%= cl_image_tag animal.photo.key, width: 240, height: 240, crop: :fill %>
+                  <% else %>
+                    <%= image_tag "CRMLO.png", width: 240, height: 240 %>
+                  <% end %>
+                </div>
+                  <% animal.adoptions.each do |adoption| %>
+                    <% if adoption.status == "Aceito" %>
+                      <div class="position-absolute top-0 start-0 w-100 bg-dark text-white d-flex justify-content-center align-items-center p-2">Adotado</div>
+                    <% end %>
+                  <% end %>
+                </div>
+
+              <div class="back-caramelo d-flex justify-content-between p-4">
+                <div class="animal-preview">
+                  <h3 class="mb-0"><%= animal.name %></h3>
+                  <p class="mb-0"><%= animal.city %>/<%= animal.state %></p>
+                </div>
+
+                <div class="icons">
+                  <%= link_to "<i class=\"fa-solid fa-circle-info\"></i>".html_safe, animal_path(animal), class:"info" %>
+                  <%= link_to "<i class=\"fa-solid fa-heart\"></i>".html_safe, animal_path(animal), class:"info" %>
+                </div>
+              </div>
+            </div>
+          </div>
+      <% end %>
+    </div>
+
+  <% end %>
+</div>
