detalhes da aplicacao, forms

--- a/app/assets/stylesheets/components/_devise_card.scss
+++ b/app/assets/stylesheets/components/_devise_card.scss
@@ -13,6 +13,12 @@
     color: $caramel;
 }
 
+.title-sm {
+    font-family: $header-font;
+    font-size: 40px;
+    color: $caramel;
+}
+
 .first-name {
     width: 260px;
 }
