--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -44,7 +44,7 @@
                   <%= f.input :state, label: "Estado", required: true %>
                   <%= f.input :phone, label: "Telefone", required: true %>
 
-                  <%= f.button :submit, "Update", class:"btn-yellow" %>
+                  <%= f.button :submit, "Salvar", class:"btn-yellow" %>
                 <% end %>
               </div>
 
@@ -115,7 +115,7 @@
                   <%= f.input :state, label: "Estado", required: true %>
                   <%= f.input :phone, label: "Telefone", required: true %>
 
-                  <%= f.button :submit, "Update", class:"btn-yellow" %>
+                  <%= f.button :submit, "Salvar", class:"btn-yellow" %>
                 <% end %>
               </div>
 
