--- a/app/assets/stylesheets/components/_animals_index_card.scss
+++ b/app/assets/stylesheets/components/_animals_index_card.scss
@@ -4,6 +4,13 @@
     color: $dark-caramel;
 }
 
+.title-form {
+    font-family: $base-font;
+    font-weight: bold;
+    color: $dark-caramel;
+    font-size: 25px;
+}
+
 .navigation {
     text-decoration: none;
     color: $dark-caramel;
