--- a/app/assets/stylesheets/components/_form_buttons.scss
+++ b/app/assets/stylesheets/components/_form_buttons.scss
@@ -71,3 +71,10 @@
     background-color: $dark-green;
     color: white;
 }
+
+.edit-form {
+    .form-check {
+        padding: 0;
+        margin-right: 20px;
+    }
+}
