--- a/app/views/matchs/show.html.erb
+++ b/app/views/matchs/show.html.erb
@@ -2,6 +2,7 @@
   <div class="mb-4">
     <p class="navigation mb-1 mt-5"><%= link_to "Home", "/", class:"navigation" %> / Meus Matchs</p>
     <h4 class="second-title"><%=@matches.count %> Matchs</h4>
+   <%= link_to 'Ver todos os animais', animals_path, class: 'btn-dark-green' %>
   </div>
 
   <div class="row d-flex align-items-between mx-3">
@@ -48,7 +49,5 @@
       </div>
     <% end %>
   </div>
-</div>
-  <div class="container mb-4">
-   <%= link_to 'Todos animais', animals_path, class: 'btn-orange-outline' %>
+
 </div>
