--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
                 <%= link_to "Meus matches", matchs_path, class: "nav-link" %>
               </li>
               <li class="nav-item active">
-                <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link" %>
+                <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link me-3" %>
               </li>
               <li class="nav-item dropdown">
               <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -40,7 +40,10 @@
                 <%= link_to "Home", "/", class: "nav-link" %>
               </li>
               <li class="nav-item active">
-                <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link" %>
+                <%= link_to "Todos os animais", animals_path, class: "nav-link" %>
+              </li>
+              <li class="nav-item active">
+                <%= link_to "Dashboard", dashboard_path(current_user), class: "nav-link me-3" %>
               </li>
               <li class="nav-item dropdown">
               <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
