ajeitei algumas palavras e acentos dos adoption forms e navbar

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -37,8 +37,8 @@
             </div>
 
             <div class="w-50 ms-3">
-              <%= f.input :gender, label: "Genero", collection: ['Macho', 'Femea'] %>
-              <%= f.input :specie, label: "Especie", collection: ['Cachorro', 'Gato']%>
+              <%= f.input :gender, label: "Gênero", collection: ['Macho', 'Femea'] %>
+              <%= f.input :specie, label: "Espécie", collection: ['Cachorro', 'Gato']%>
             </div>
           </div>
 
