--- a/app/views/adoption_forms/edit.html.erb
+++ b/app/views/adoption_forms/edit.html.erb
@@ -1,5 +1,5 @@
  <div class="container">
-  <h2 class="title text-center mt-4 mb-2">Editar Formulario de Adoção</h2>
+  <h2 class="title text-center mt-4 mb-2">Editar Formulário de Adoção</h2>
   <div class="devise-card mt-4 mb-5 mx-auto">
     <%= render 'form', edit_adoptionform: @adoption_form %>
   </div>
