--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,7 +31,7 @@
               </a>
                 <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                   <%= link_to "Editar Perfil", edit_user_path, class: "dropdown-item" %>
-                  <%= link_to "Editar preferências", edit_adoption_form_path(current_user), class: "dropdown-item" if current_user.adoption_form.present? %>
+                  <%= link_to "Editar Formulário", edit_adoption_form_path(current_user), class: "dropdown-item" if current_user.adoption_form.present? %>
                   <%= link_to "Sair", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
                 </div>
               </li>
@@ -55,7 +55,6 @@
               </a>
                 <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                   <%= link_to "Editar Perfil", edit_user_path(current_user), class: "dropdown-item" %>
-                  <!-- <%= link_to "Editar preferências", "#", class: "dropdown-item" %> -->
                   <%= link_to "Sair", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
                 </div>
               </li>
