--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,6 +33,8 @@
 
 </div>
 
+
+
 <div class="happy-end mb-5 mx-5">
   <div class="header text-center">
     <h1 class="title-home mb-0 mt-4">Nossos finais felizes</h1>
@@ -40,54 +42,49 @@
     <br> lar para os nossos pets, e o melhor amigo para você!</p>
   </div>
 
-  <div class="d-flex flex-row mt-4">
-    <div class="card me-3 ms-3">
-      <div class="card-body d-flex flex-row align-content-between">
-        <div class="my-auto">
-          <%= image_tag('happyend-1.jpg', alt: 'Happy End', class:"card-img" ) %>
-        </div>
-        <div class="px-3 d-flex flex-column justify-content-between">
-          <div>
-            <p class="card-title mb-0">Lucas & Juninho</p>
-            <p class="card-text mt-0">Manaus/AM</p>
-          </div>
-          <p class="card-text mt-2">"A chegada do Juninho foi a melhor coisa que aconteceu na minha vida!"</p>
-        </div>
-      </div>
-    </div>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <% @testimonie.each_slice(3).with_index do |testimony_group, index| %>
+      <div class="carousel-item <%= 'active' if index.zero? %>">
+        <div class="row">
+          <% testimony_group.each do |testimony| %>
+            <div class="d-flex flex-row mt-4">
+              <div class="card me-3 ms-3">
+                <div class="card-body d-flex flex-row align-content-between">
+                  <div class="my-auto">
+                     <% if testimony.adoption.animal.photo.attached? %>
+                       <%= cl_image_tag testimony.adoption.animal.photo.key, class:"card-img" %>
+                     <% else %>
+                       <%= image_tag "CRMLO.png", class:"card-img"  %>
+                     <% end %>
+                  </div>
+                  <div class="px-3 d-flex flex-column justify-content-between">
+                    <div>
+                      <p class="card-title mb-0"><%=testimony.adoption.animal.name%> e <%=testimony.adoption.user.first_name%></p>
+                      <p class="card-text mt-0"></p>
+                    </div>
+                    <p class="card-text mt-2"><%= testimony.content %></p>
+                  </div>
+                </div>
+              </div>
 
-    <div class="card me-3 ms-3">
-      <div class="card-body d-flex flex-row align-content-between">
-        <div class="my-auto">
-          <%= image_tag('happyend-2.jpg', alt: 'Happy End', class:"card-img" ) %>
-        </div>
-        <div class="px-3 d-flex flex-column justify-content-between">
-          <div>
-            <p class="card-title mb-0">Pedro & Amora</p>
-            <p class="card-text mt-0">Brasília/DF</p>
+          <% end %>
           </div>
-          <p class="card-text mt-2">"A Amora me faz companhia o dia inteiro, sou mais feliz com ela!"</p>
         </div>
       </div>
-    </div>
-
-    <div class="card me-3 ms-3">
-      <div class="card-body d-flex flex-row align-content-between">
-        <div class="my-auto">
-          <%= image_tag('happyend-3.jpg', alt: 'Happy End', class:"card-img" ) %>
-        </div>
-        <div class="px-3 d-flex flex-column justify-content-between">
-          <div>
-            <p class="card-title mb-0">Ana & Thor</p>
-            <p class="card-text mt-0">São Paulo/SP</p>
-          </div>
-          <p class="card-text mt-2">"O Thor gosta de fazer trilha assim como eu, me protege e faz companhia nas nossas aventuras."</p>
-        </div>
-      </div>
-    </div>
+    <% end %>
   </div>
-
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Anterior</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Próximo</span>
+  </a>
 </div>
+</div>
+
 
 <div class="whyadopt mb-5 mx-5">
   <div class="header text-center">
