--- a/app/views/bookmarks/_index.html.erb
+++ b/app/views/bookmarks/_index.html.erb
@@ -1,4 +1,7 @@
 <% @bookmarks = Bookmark.where(user_id: current_user.id).includes(:animal) %>
+  <div class="container mb-4"> <!-- Add CSS class to the container -->
+    <div class="row d-flex align-items-between mx-3">
+
       <% @bookmarks.each do |bookmark| %>
 
           <div class="col-sm-3 mb-4">
@@ -24,3 +27,5 @@
             </div>
           </div>
       <% end %>
+    </div>
+  </div>
