sem o disable true e dashboard ok

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,7 +25,7 @@
           <%= f.input :city, label: "Cidade", required: true %>
           <%= f.input :state, label: 'Estado', as: :select, collection: @states, placeholder: 'Selecione o Estado', include_blank: true, class:"state ms-3", required: true %>
           <%= f.input :phone, label: "Telefone", required: true %>
-          <%= f.input :adopter, label: "Quero adotar", input_html: { data: { action: "change->tab#checkAdopter", target: "tab.adopter" } }, disabled: true %>
+          <%= f.input :adopter, label: "Quero adotar", input_html: { data: { action: "change->tab#checkAdopter", target: "tab.adopter" } } %>
         </div>
 
        <div class="tab-pane" id="preferencias" data-target="tab.preferencias">
