--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -123,7 +123,7 @@
                 <% end %>
               </div>
 
-              <%#<div data-show-dashboard-target="adoptionElement" class="mt-0 mb-5 d-none">%>
+              <div data-show-dashboard-target="adoptionElement" class="mt-0 mb-5 d-none">
                   <div>
                     <% if @adoptions %>
                       <%= render 'adoptions/my_applications' %>
@@ -131,7 +131,7 @@
                       <h3>Não há nenhum interessado em seus animais.</h3>
                     <% end %>
                   </div>
-              <%#</div>%>
+              </div>
 
               <div data-show-dashboard-target="animalElement" class="mt-0 mb-5 d-none">
                 <% if @animals %>
