favicon e title tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Meu Caramelo</title>
+    <title>Meu Caramelo - Transforme uma vida, adote um amigo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -9,6 +9,7 @@
     <%= javascript_include_tag 'https://code.jquery.com/jquery-3.4.1.slim.min.js' %>
     <%= javascript_include_tag 'https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js' %>
     <%= javascript_importmap_tags %>
+    <%= favicon_link_tag %>
   </head>
 
   <body>
