--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -32,8 +32,10 @@
               </div>
 
               <div class="icons d-flex">
-                <%= link_to "<i class=\"fa-solid fa-circle-info\"></i>".html_safe, animal_path(animal), class:"info" %>
-                <%= button_to "<i class=\"fa-solid fa-heart\"></i>".html_safe, bookmarks_path, method: :post, params: { bookmark: { user_id: current_user.id, animal_id: animal.id } }, style: "background: none; border: none; padding: 0; font: inherit; cursor: pointer;", class: "info ms-1" %>
+                  <%= link_to "<i class=\"fa-solid fa-circle-info\"></i>".html_safe, animal_path(animal), class:"info" %>
+                <% if current_user.adopter? %>
+                  <%= button_to "<i class=\"fa-solid fa-heart\"></i>".html_safe, bookmarks_path, method: :post, params: { bookmark: { user_id: current_user.id, animal_id: animal.id } }, style: "background: none; border: none; padding: 0; font: inherit; cursor: pointer;", class: "info ms-1" %>
+                <% end %>
               </div>
             </div>
           </div>
