--- a/app/views/bookmarks/_index.html.erb
+++ b/app/views/bookmarks/_index.html.erb
@@ -1,26 +1,29 @@
 <% @bookmarks = Bookmark.where(user_id: current_user.id).includes(:animal) %>
-      <% @bookmarks.each do |bookmark| %>
+  <% if @bookmarks.any? %>
+    <% @bookmarks.each do |bookmark| %>
 
-          <div class="col-sm-3 mb-4">
-            <div class="card-index mx-auto my-auto">
-              <div class="position-relative">
-                <% if bookmark.animal.photo.attached? %>
-                  <%= cl_image_tag bookmark.animal.photo.key, width: 240, height: 240, crop: :fill %>
-                <% else %>
-                  <%= image_tag "CRMLO.png", width: 240, height: 240 %>
-                <% end %>
-              </div>
-              <div class="back-caramelo d-flex justify-content-between p-4">
-                <div class="animal-preview">
-                  <h3 class="mb-0"><%= bookmark.animal.name %></h3>
-                  <p class="mb-0"><%= bookmark.animal.city %>/<%= bookmark.animal.state %></p>
-                </div>
-                <div class="my-icons">
-                  <%= link_to "<i class=\"fa-solid fa-circle-info\"></i>".html_safe, animal_path(bookmark.animal), class:"info me-1" %>
-                  <%= link_to '<i class="fa-solid fa-pen-to-square"></i>'.html_safe, edit_animal_path(bookmark.animal), class:"edit me-1 edit" %>
-                  <%= button_to '<i class="fa-solid fa-trash"></i>'.html_safe, bookmark_path(bookmark), method: :delete, data: { turbo_confirm: "Você tem certeza?" }, style: "background: none; border: none; padding: 0; font: inherit; cursor: pointer;", class: "delete" %>
-                </div>
-              </div>
+      <div class="col-sm-3 mb-4">
+        <div class="card-index mx-auto my-auto">
+          <div class="position-relative">
+            <% if bookmark.animal.photo.attached? %>
+              <%= cl_image_tag bookmark.animal.photo.key, width: 240, height: 240, crop: :fill %>
+            <% else %>
+              <%= image_tag "CRMLO.png", width: 240, height: 240 %>
+            <% end %>
+          </div>
+          <div class="back-caramelo d-flex justify-content-between p-4">
+            <div class="animal-preview">
+              <h3 class="mb-0"><%= bookmark.animal.name %></h3>
+              <p class="mb-0"><%= bookmark.animal.city %>/<%= bookmark.animal.state %></p>
+            </div>
+            <div class="my-icons d-flex">
+              <%= link_to "<i class=\"fa-solid fa-circle-info\"></i>".html_safe, animal_path(bookmark.animal), class:"info me-1" %>
+              <%= button_to '<i class="fa-solid fa-trash"></i>'.html_safe, bookmark_path(bookmark), method: :delete, data: { turbo_confirm: "Você tem certeza?" }, style: "background: none; border: none; padding: 0; font: inherit; cursor: pointer;", class: "delete" %>
             </div>
           </div>
-      <% end %>
+        </div>
+      </div>
+    <% end %>
+  <% else %>
+    <h3>Você ainda não tem nenhum animal favorito.</h3>
+  <% end %>
