--- a/app/views/matchs/show.html.erb
+++ b/app/views/matchs/show.html.erb
@@ -24,9 +24,9 @@
               <p class="mb-0"><%= match[:animal].city %>/<%= match[:animal].state %></p>
             </div>
 
-            <div class="icons">
+            <div class="icons d-flex">
               <%= link_to "<i class=\"fa-solid fa-circle-info\"></i>".html_safe, animal_path(match[:animal].id), class:"info" %>
-              <%= link_to "<i class=\"fa-solid fa-heart\"></i>".html_safe, animal_path(match[:animal].id), class:"info" %>
+              <%= button_to "<i class=\"fa-solid fa-heart\"></i>".html_safe, bookmarks_path(from_page: "matchs"), method: :post, params: { bookmark: { user_id: current_user.id, animal_id: match[:animal].id } }, style: "background: none; border: none; padding: 0; font: inherit; cursor: pointer;", class: "info ms-1" %>
             </div>
           </div>
 
