--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -57,15 +57,11 @@
               </div>
 
               <div data-show-dashboard-target="animalElement" class="mt-0 mb-5 d-none">
-<<<<<<< Updated upstream
-                <%= 'Adicionar rota' %> <!-- FALTA COLOCAR O RENDER AQUI -->
-=======
                 <%#<% if @bookmarks %>
                   <%= render 'bookmarks/index' %>
                 <%#<% else %>
                   <%#<h3>Você ainda não tem nenhum animal favorito.</h3>
                 <% end %>
->>>>>>> Stashed changes
               </div>
             </div>
 
@@ -127,15 +123,13 @@
                 <% end %>
               </div>
 
-              <%#<div data-show-dashboard-target="adoptionElement" class="mt-0 mb-5 d-none">%>
-                  <div>
-                    <% if @adoptions %>
-                      <%= render 'adoptions/my_applications' %>
-                    <% else %>
-                      <h3>Não há nenhum interessado em seus animais.</h3>
-                    <% end %>
-                  </div>
-              <%#</div>%>
+              <div data-show-dashboard-target="adoptionElement" class="mt-0 mb-5 d-none">
+                <% if @adoptions %>
+                  <%= render 'adoptions/my_applications' %>
+                <% else %>
+                  <h3>Não há nenhum interessado em seus animais.</h3>
+                <% end %>
+              </div>
 
               <div data-show-dashboard-target="animalElement" class="mt-0 mb-5 d-none">
                 <% if @animals %>
