--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,8 +33,6 @@
 
 </div>
 
-
-
 <div class="happy-end mb-5 mx-5">
   <div class="header text-center">
     <h1 class="title-home mb-0 mt-4">Nossos finais felizes</h1>
@@ -93,7 +91,7 @@
     <p class="mb-3 subtitle">Adote, não compre!</p>
   </div>
 
-  <div class="d-flex flex-row mt-4">
+  <div class="d-flex flex-row mt-4 mx-auto justify-content-between">
     <div class="card me-5">
         <div class="card-body d-flex flex-row align-items-center">
           <div class="my-auto">
