--- a/app/views/testimonies/new.html.erb
+++ b/app/views/testimonies/new.html.erb
@@ -2,7 +2,7 @@
   <h2 class="title text-center mt-4 mb-0">Conte seu final feliz</h2>
   <div class="devise-card mt-4 mb-5 mx-auto">
     <%= simple_form_for [@adoption, @testimony] do |f| %>
-      <%= f.input :content, as: :text, label: false, :input_html => { class: 'test', :cols => 4, :rows => 8 }, placeholder: 'Descreva sua história' %>
+      <%= f.input :content, as: :text, label: false, :input_html => { class: 'test', :cols => 4, :rows => 8, maxlength: 100 }, placeholder: 'Descreva sua história' %>
       <%= f.button :submit, "Enviar", class: "btn-yellow" %>
       <%= link_to 'Voltar ao menu principal', dashboard_path, class: 'btn btn-dark-green' %>
     <% end %>
