agora com o testimony da home arrumado

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -59,10 +59,10 @@
                       </div>
                       <div class="px-3 d-flex flex-column justify-content-between">
                         <div>
-                          <p class="card-title mb-0"><%=testimony.adoption.animal.name%> e <%=testimony.adoption.user.first_name%></p>
+                          <p class="card-title"><%=testimony.adoption.animal.name%> e <%=testimony.adoption.user.first_name%></p>
                           <p class="card-text mt-0"></p>
+                          <p class="card-text"><%= testimony.content %></p>
                         </div>
-                        <p class="card-text mt-2"><%= testimony.content %></p>
                       </div>
                     </div>
                   </div>
