--- a/app/views/adoptions/show.html.erb
+++ b/app/views/adoptions/show.html.erb
@@ -1,6 +1,9 @@
 <!-- pagina de 'match' da adoção logo após o cadastro -->
-<div class="container my-3">
-<p class="navigation mb-1 mt-5"><%= link_to "Home", "/", class:"navigation" %> / <%= link_to "Minhas adoções", dashboard_path(@adoption), class:"navigation" %> / Detalhes</p>
+<div class="container d-flex flex-column mx-auto my-3">
+  <p class="mb-1 mt-5">
+    <%= link_to "Home", "/", class:"navigation" %> /
+    <%= link_to "Minhas adoções", dashboard_path(@adoption), class:"navigation" %> / Detalhes
+  </p>
   <% if defined?(@adoption_created) && @adoption_created %>
     <h1>DEU MATCH</h1>
 
@@ -8,25 +11,24 @@
     <h4>Em breve entraremos em contato com você na data escolhida para que possamos conversar um pouco mais.</h4>
   <% end %>
 
-    <h2 class="second-title mb-4">Detalhes da Aplicação</h2>
-    <div class="px-3 pb-3">
-      <div class="card-show d-flex mb-5 mx-auto">
-        <div>
-          <% if @animal.photo.attached? %>
-            <%= cl_image_tag @animal.photo.key, width: 550, height: 550, crop: :fill %>
-          <% else %>
-            <%= image_tag "CRMLO.png", width: 550, height: 550 %>
-          <% end %>
-        </div>
+  <h2 class="second-title mb-4">Resumo da Aplicação</h2>
+    <div class="card-show d-flex mb-5 mx-auto">
+      <div>
+        <% if @animal.photo.attached? %>
+          <%= cl_image_tag @animal.photo.key, width: 550, height: 550, crop: :fill %>
+        <% else %>
+          <%= image_tag "CRMLO.png", width: 550, height: 550 %>
+        <% end %>
+      </div>
 
-        <div class="animal-info py-4 px-5 d-flex flex-column">
-          <h2 class="title"><%= "#{@adoption.animal.name}" %></h2>
-          <p><strong><%= "Interessado(a): " %></strong><%= "#{@adoption.user.first_name} #{@adoption.user.last_name}" %></p>
-          <p><strong><%= "E-mail de #{@adoption.user.first_name}: " %></strong><%= "#{@adoption.user.email}" %></p>
-          <p><strong><%= "Tutor(a): " %></strong><%= "#{@adoption.animal.user.first_name} #{@adoption.animal.user.last_name}" %></p>
-          <p><strong><%= "E-mail de #{@adoption.animal.user.first_name}: " %></strong><%= "#{@adoption.animal.user.email}" %></p>
+      <div class="animal-info py-4 px-5 d-flex flex-column">
+        <h2 class="title"><%= "#{@adoption.animal.name}" %></h2>
+        <p><strong><%= "Interessado(a): " %></strong><%= "#{@adoption.user.first_name} #{@adoption.user.last_name}" %></p>
+        <p><strong><%= "E-mail de #{@adoption.user.first_name}: " %></strong><%= "#{@adoption.user.email}" %></p>
+        <p><strong><%= "Tutor(a): " %></strong><%= "#{@adoption.animal.user.first_name} #{@adoption.animal.user.last_name}" %></p>
+        <p><strong><%= "E-mail de #{@adoption.animal.user.first_name}: " %></strong><%= "#{@adoption.animal.user.email}" %></p>
 
-           <div class="info my-3">
+        <div class="info my-3">
           <% if @animal.specie === "Gato" %>
             <p><i class="fa-solid fa-cat me-1"></i><%= @animal.specie %></p>
           <% else %>
@@ -39,48 +41,51 @@
 
           <% if @animal.vaccination && @animal.gender == 'Macho' %>
             <p><i class="fa-solid fa-check"></i> Vacinado</p>
-            <% elsif @animal.vaccination == false && @animal.gender == 'Macho' %>
+          <% elsif @animal.vaccination == false && @animal.gender == 'Macho' %>
             <p><i class="fa-solid fa-xmark"></i> Não vacinado</p>
-            <% elsif @animal.vaccination && @animal.gender == 'Fêmea' %>
+          <% elsif @animal.vaccination && @animal.gender == 'Fêmea' %>
             <p><i class="fa-solid fa-check"></i> Vacinada</p>
-            <% elsif @animal.vaccination == false && @animal.gender == 'Fêmea' %>
+          <% elsif @animal.vaccination == false && @animal.gender == 'Fêmea' %>
             <p><i class="fa-solid fa-xmark"></i> Não vacinada</p>
           <% end %>
+
           <% if @animal.neutered && @animal.gender == 'Macho' %>
             <p><i class="fa-solid fa-check"></i> Castrado</p>
-            <% elsif @animal.neutered == false && @animal.gender == 'Macho' %>
+          <% elsif @animal.neutered == false && @animal.gender == 'Macho' %>
             <p><i class="fa-solid fa-xmark"></i> Não castrado</p>
-            <% elsif @animal.neutered && @animal.gender == 'Fêmea' %>
+          <% elsif @animal.neutered && @animal.gender == 'Fêmea' %>
             <p><i class="fa-solid fa-check"></i> Castrada</p>
-            <% elsif @animal.neutered == false && @animal.gender == 'Fêmea' %>
+          <% elsif @animal.neutered == false && @animal.gender == 'Fêmea' %>
             <p><i class="fa-solid fa-xmark"></i> Não castrada</p>
           <% end %>
         </div>
 
-          <h4><strong><%= "Data para entrega do pet: " %></strong> <%= "#{@adoption.date.strftime("%d/%m/%Y")}" %></h4>
+        <h4><strong><%= "Data para entrega do pet: " %></strong> <%= "#{@adoption.date.strftime("%d/%m/%Y")}" %></h4>
 
-          <div class="status">
-            <% if @adoption.status == 'Pendente' %>
-              <h4 class="d-inline-flex"><strong class='my-auto'>Status: </strong><span class="d-inline-flex p-1 ms-1 border border-warning text-warning"><%= @adoption.status %></span></h4>
-            <% elsif @adoption.status == 'Aceito' %>
-              <h4 class="d-inline-flex"><strong class='my-auto'>Status: </strong><span class="d-inline-flex p-1 ms-1 border border-success text-success"><%= @adoption.status %></span></h4>
-            <% elsif @adoption.status == 'Recusado' %>
-              <h4 class="d-inline-flex"><strong class='my-auto'>Status: </strong><span class="d-inline-flex p-1 ms-1 border border-danger text-danger"><%= @adoption.status %></span></h4>
-            <% end %>
-          </div>
-
-          <% if current_user.adopter == false && @adoption.status == "Pendente" %>
-            <div class="d-flex align-items-center mt-2">
-              <p class="my-auto"><strong class="contract-bold"><%= "O interessado(a) está apto(a) a ser o novo tutor(a) de " %><%= @adoption.animal.name %>?</strong></p>
-              <%= button_to 'Sim', update_status_path(id: @adoption.id, status: 'Aceito'), method: :patch, data: { "turbo-method": :patch }, class: "btn-green mx-2" %>
-              <%= button_to 'Não', update_status_path(id: @adoption.id, status: 'Recusado'), method: :patch, data: { "turbo-method": :patch }, class: "btn-red" %>
-            </div>
-          <% end %>
-
-          <% if current_user.adopter? && @adoption.status == "Aceito" %>
-            <%= link_to 'Conte-nos sua experiência', new_adoption_testimony_path(@adoption), class:'btn-yellow-outline' %>
+        <div class="status">
+          <% if @adoption.status == 'Pendente' %>
+            <h4 class="d-inline-flex"><strong class='my-auto'>Status: </strong><span class="d-inline-flex p-1 ms-1 border border-warning text-warning"><%= @adoption.status %></span></h4>
+          <% elsif @adoption.status == 'Aceito' %>
+            <h4 class="d-inline-flex"><strong class='my-auto'>Status: </strong><span class="d-inline-flex p-1 ms-1 border border-success text-success"><%= @adoption.status %></span></h4>
+          <% elsif @adoption.status == 'Recusado' %>
+            <h4 class="d-inline-flex"><strong class='my-auto'>Status: </strong><span class="d-inline-flex p-1 ms-1 border border-danger text-danger"><%= @adoption.status %></span></h4>
           <% end %>
         </div>
+
+        <% if current_user.adopter == false && @adoption.status == "Pendente" %>
+          <div class="d-flex align-items-center mt-2">
+            <p class="my-auto"><strong class="contract-bold"><%= "O interessado(a) está apto(a) a ser o novo tutor(a) de " %><%= @adoption.animal.name %>?</strong></p>
+            <%= button_to 'Sim', update_status_path(id: @adoption.id, status: 'Aceito'), method: :patch, data: { "turbo-method": :patch }, class: "btn-green mx-2" %>
+            <%= button_to 'Não', update_status_path(id: @adoption.id, status: 'Recusado'), method: :patch, data: { "turbo-method": :patch }, class: "btn-red" %>
+          </div>
+        <% end %>
+
+        <% if current_user.adopter? && @adoption.status == "Aceito" %>
+          <%= link_to 'Conte-nos sua experiência', new_adoption_testimony_path(@adoption), class:'btn-yellow-outline' %>
+        <% end %>
       </div>
     </div>
+
+
+
 </div>
