--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -33,9 +33,22 @@
 
               <div class="icons d-flex">
                   <%= link_to "<i class=\"fa-solid fa-circle-info\"></i>".html_safe, animal_path(animal), class:"info" %>
-                <% if current_user.adopter? %>
-                  <%= button_to "<i class=\"fa-solid fa-heart\"></i>".html_safe, bookmarks_path, method: :post, params: { bookmark: { user_id: current_user.id, animal_id: animal.id } }, style: "background: none; border: none; padding: 0; font: inherit; cursor: pointer;", class: "info ms-1" %>
-                <% end %>
+
+                  <% if current_user.adopter? && animal.adoptions.none? { |adoption| adoption.status == "Aceito" } %>
+                    <% if current_user.bookmarks.exists?(animal_id: animal.id) %>
+                      <% bookmark = current_user.bookmarks.find_by(animal_id: animal.id) %>
+                      <%= button_to "<i class='fa-solid fa-heart red-heart'></i>".html_safe,
+                        bookmark_path(bookmark), method: :delete,
+                        style: "background: none; border: none; padding: 0; font: inherit; cursor: pointer;",
+                        class: "info ms-1 favorite-button" %>
+                    <% else %>
+                      <%= button_to "<i class='fa-solid fa-heart'></i>".html_safe,
+                        bookmarks_path, method: :post, params: { bookmark: { animal_id: animal.id } },
+                        style: "background: none; border: none; padding: 0; font: inherit; cursor: pointer;",
+                        class: "info ms-1 favorite-button" %>
+                    <% end %>
+                  <% end %>
+
               </div>
             </div>
           </div>
