--- a/app/views/bookmarks/_index.html.erb
+++ b/app/views/bookmarks/_index.html.erb
@@ -1,6 +1,6 @@
 <% @bookmarks = Bookmark.where(user_id: current_user.id).includes(:animal) %>
 <div class="container mb-4"> <!-- Add CSS class to the container -->
-  <div class="row d-flex align-items-between mx-3">                      
+  <div class="row d-flex align-items-between mx-3">
   <% if @bookmarks.any? %>
     <% @bookmarks.each do |bookmark| %>
 
@@ -20,7 +20,7 @@
             </div>
             <div class="my-icons d-flex">
               <%= link_to "<i class=\"fa-solid fa-circle-info\"></i>".html_safe, animal_path(bookmark.animal), class:"info me-1" %>
-              <%= button_to '<i class="fa-solid fa-trash"></i>'.html_safe, bookmark_path(bookmark), method: :delete, data: { turbo_confirm: "Você tem certeza?" }, style: "background: none; border: none; padding: 0; font: inherit; cursor: pointer;", class: "delete" %>
+              <%= button_to '<i class="fa-solid fa-heart-crack"></i>'.html_safe, bookmark_path(bookmark, from_page: "dashboard"), method: :delete, data: { turbo_confirm: "Você tem certeza?" }, style: "background: none; border: none; padding: 0; font: inherit; cursor: pointer;", class: "delete" %>
             </div>
           </div>
         </div>
