view resumo da adoçao

--- a/app/views/bookmarks/_index.html.erb
+++ b/app/views/bookmarks/_index.html.erb
@@ -29,7 +29,7 @@
       </div>
     <% end %>
   <% else %>
-    <h3>Você ainda não tem nenhum animal favorito.</h3>
+    <p>Você ainda não tem nenhum animal favorito</p>
   <% end %>
   </div>
 </div>
