--- a/app/assets/stylesheets/components/_devise_card.scss
+++ b/app/assets/stylesheets/components/_devise_card.scss
@@ -7,6 +7,15 @@
     font-family: $base-font;
 }
 
+.adoption-card {
+    background-color: $caramel-grey;
+    border-radius: 0.5rem;
+    box-shadow: 0 4px 4px rgba(0, 0, 0.2, 0.2);
+    padding: 30px;
+    width: 100%;
+    font-family: $base-font;
+}
+
 .title {
     font-family: $header-font;
     font-size: 50px;
