--- a/app/views/adoptions/show.html.erb
+++ b/app/views/adoptions/show.html.erb
@@ -1,6 +1,5 @@
-<!-- pagina de 'match' da adoção logo após o cadastro -->
 <div class="container d-flex flex-column mx-auto my-3">
-  <p class="mb-1 mt-5">
+  <p class="navigation mb-1 mt-5">
     <%= link_to "Home", "/", class:"navigation" %> /
     <%= link_to "Minhas adoções", dashboard_path(@adoption), class:"navigation" %> / Detalhes
   </p>
@@ -11,7 +10,7 @@
     <h4>Em breve entraremos em contato com você na data escolhida para que possamos conversar um pouco mais.</h4>
   <% end %>
 
-  <h2 class="second-title mb-4">Resumo da Aplicação</h2>
+  <h2 class="second-title mb-4">Resumo da Adoção</h2>
     <div class="card-show d-flex mb-5 mx-auto">
       <div>
         <% if @animal.photo.attached? %>
@@ -21,7 +20,7 @@
         <% end %>
       </div>
 
-      <div class="animal-info py-4 px-5 d-flex flex-column">
+      <div class="animal-info py-4 px-5 d-flex flex-column justify-content-between">
         <h2 class="title"><%= "#{@adoption.animal.name}" %></h2>
         <p><strong><%= "Interessado(a): " %></strong><%= "#{@adoption.user.first_name} #{@adoption.user.last_name}" %></p>
         <p><strong><%= "E-mail de #{@adoption.user.first_name}: " %></strong><%= "#{@adoption.user.email}" %></p>
@@ -72,13 +71,6 @@
           <% end %>
         </div>
 
-        <% if current_user.adopter == false && @adoption.status == "Pendente" %>
-          <div class="d-flex align-items-center mt-2">
-            <p class="my-auto"><strong class="contract-bold"><%= "O interessado(a) está apto(a) a ser o novo tutor(a) de " %><%= @adoption.animal.name %>?</strong></p>
-            <%= button_to 'Sim', update_status_path(id: @adoption.id, status: 'Aceito'), method: :patch, data: { "turbo-method": :patch }, class: "btn-green mx-2" %>
-            <%= button_to 'Não', update_status_path(id: @adoption.id, status: 'Recusado'), method: :patch, data: { "turbo-method": :patch }, class: "btn-red" %>
-          </div>
-        <% end %>
 
         <% if current_user.adopter? && @adoption.status == "Aceito" %>
           <%= link_to 'Conte-nos sua experiência', new_adoption_testimony_path(@adoption), class:'btn-yellow-outline' %>
@@ -86,6 +78,58 @@
       </div>
     </div>
 
+    <div>
+      <h3 class="second-title-dash">Formulário do Adotante</h2>
+      <p>Conheça um pouco mais sobre o possível novo tutor do seu pet, para te ajudar a decidir se ele está apto para a adoção</p>
 
+      <div class="mx-auto mt-4 mb-5 adoption-card">
+        <%= simple_form_for @adoption_form do |f| %>
+          <div class="name d-flex justify-content-between">
+            <div class="col-5 mr-3">
+              <%= f.input :pergunta1, label: "Tem criança na residência? ", collection: ['Sim', 'Não'], disabled: true %>
+            </div>
+            <div class="col-6 mr-3">
+              <%= f.input :pregunta2, label: "Mora em? ", collection: ['Casa', 'Apartamento'], disabled: true %>
+            </div>
+          </div>
 
+          <div class="name d-flex justify-content-between">
+            <div class="col-5 mr-3">
+              <%= f.input :pergunta3, label: "Espaço disponível na casa? ", collection: ['Pequeno', 'Medio', 'Grande'], disabled: true %>
+            </div>
+            <div class="col-6 mr-3">
+              <%= f.input :pergunta4, label: "Tem outros pets? ", collection: ['Sim', 'Não'], disabled: true %>
+            </div>
+          </div>
+
+          <div class="name d-flex justify-content-between">
+            <div class="col-5 mr-3">
+              <%= f.input :pergunta5, label: "Quantas horas você passa em casa por dia?", collection: ['4', '4-8', '4-12', '+ 12'], disabled: true %>
+            </div>
+            <div class="col-6 mr-3">
+              <%= f.input :pergunta6, label: "Quantas pessoas morando na residência? ", disabled: true %>
+            </div>
+          </div>
+
+          <div class="name d-flex justify-content-between">
+            <div class="col-5 mr-3">
+              <%= f.input :pergunta7, label: "Ele ficará preso em algum cômodo?", collection: ['Sim', 'Não'], disabled: true %>
+            </div>
+            <div class="col-6 mr-3">
+             <%= f.input :pergunta8, label: "Aceita manter contato e mandar notícias constantemente?", collection: ['Sim', 'Não'], disabled: true %>
+            </div>
+          </div>
+        <% end %>
+
+        <div class="text-center">
+          <% if current_user.adopter? == false && @adoption.status == "Pendente" %>
+            <div class="d-flex justify-content-center mt-3">
+              <p class="my-auto"><strong class="contract-bold"><%= "O interessado(a) está apto(a) a ser o novo tutor(a) de " %><%= @adoption.animal.name %>?</strong></p>
+              <%= button_to 'Sim', update_status_path(id: @adoption.id, status: 'Aceito'), method: :patch, data: { "turbo-method": :patch }, class: "btn-green mx-2" %>
+              <%= button_to 'Não', update_status_path(id: @adoption.id, status: 'Recusado'), method: :patch, data: { "turbo-method": :patch }, class: "btn-red" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
 </div>
