--- a/app/views/matchs/show.html.erb
+++ b/app/views/matchs/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container mb-4">
   <div class="mb-4">
-    <p class="navigation mb-1 mt-5"><%= link_to "Home", "/", class:"navigation" %> / Meus Matchs</p>
-    <h4 class="second-title"><%=@matches.count %> Matchs</h4>
+    <p class="navigation mb-1 mt-5"><%= link_to "Home", "/", class:"navigation" %> / Meus Matches</p>
+    <h4 class="second-title"><%=@matches.count %> Matches</h4>
    <%= link_to 'Ver todos os animais', animals_path, class: 'btn-dark-green' %>
   </div>
 
