cor e fundo da tag adotado

--- a/app/assets/stylesheets/components/_animals_index_card.scss
+++ b/app/assets/stylesheets/components/_animals_index_card.scss
@@ -99,9 +99,9 @@
         .icons {
             font-size: 25px;
             .edit {
-                color: #ffc800;
+                color: $caramel;
                  :hover {
-                    color: #f3be00;
+                    color: $dark-caramel;
                 }
             }
             .delete {
