--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,4 +10,5 @@
 @import "_form_buttons";
 @import "_form_animals";
 @import "_show_users";
-@import "favorite_button"
+@import "favorite_button";
+@import "match";
