--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -17,3 +17,10 @@ $beige: #E6CCB2;
 $caramel-grey: #F1ECE2;
 $caramel-white: #F6F6F6;
 $dark-green: #4f772d;
+.green {
+    color: #4f772d;
+}
+
+.red {
+    color: #FD1015;
+}
