--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -72,7 +72,7 @@
         <% if @animal.adoptions.present? %>
           <% adoptions = @animal.adoptions %>
           <% if adoptions.any? { |adoption| adoption.status == "Aceito" } %>
-            <div class="bg-dark text-white d-flex justify-content-center align-items-center rounded-3 w-100 p-2">Adotado</div>
+            <div class="adopted-btn d-flex justify-content-center align-items-center rounded-3 w-100 p-2">Adotado</div>
           <% end %>
         <% else %>
           <% if current_user.adopter? %>
