--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,7 +22,7 @@
             </div>
 
             <div class="w-50 ms-3">
-              <%= f.input :gender, label: "Gênero", collection: ['Macho', 'Femea'] %>
+              <%= f.input :gender, label: "Gênero", collection: ['Macho', 'Fêmea'] %>
               <%= f.input :specie, label: "Espécie", collection: ['Cachorro', 'Gato']%>
             </div>
           </div>
